# tquic-example-c

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh  cert.crt  cert.key  demo_complete.sh  demo_websocket.sh  simple_client.c  tquic_websocket_client.c  tquic_websocket_interactive_client.c  tquic_websocket_server.c
quic-websocket/: ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  SUCCESS.md  generate_certs.sh  run.sh  test_websocket.sh
quic-websocket/certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  cert.pem  key.pem
quic-websocket/examples/: benchmark.rs  chat_client.rs  client.rs  http3_websocket_client.rs  simple_http3_client.rs  websocket_client.rs
quic-websocket/src/: client.rs  h3_server.rs  h3_websocket_server.rs  handler.rs  lib.rs  main.rs  message.rs  server.rs  websocket.rs
tquic-websocket-server/: CMakeLists.txt  README.md  build.sh
tquic-websocket-server/config/: server.conf
tquic-websocket-server/scripts/: install.sh  test.sh  tquic-websocket-server.service  uninstall.sh
tquic-websocket-server/src/: tquic_websocket_server.c
websocket-layered-client/: ARCHITECTURE.md  CMakeLists.txt  README.md  build.sh
websocket-layered-client/examples/: chat_client.c  json_client.c
websocket-layered-client/include/: business_logic.h  event_system.h  layered_websocket_client.h  message_handler.h  websocket_protocol.h
websocket-layered-client/src/: business_logic.c  event_system.c  layered_websocket_client.c  message_handler.c  websocket_protocol.c
