[package]
name = "quic-websocket"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A WebSocket-like server built on QUIC protocol"
license = "MIT"

[dependencies]
quinn = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "chat_client"
path = "examples/chat_client.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[lib]
name = "quic_websocket"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
